<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4F1FE"
    android:orientation="vertical"
    android:padding="8dp" >

    <com.keng.dooplus.thetv.customview.RSUTextView
        android:id="@+id/txtMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/otp_request_dialog_message_1"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtMessage"
        android:layout_marginTop="8dp"
        android:hint="@string/otp_request_dialog_edittext_email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputEmail"
        android:layout_marginTop="8dp"
        android:hint="@string/otp_request_dialog_edittext_password"
        android:inputType="textPassword" />

    <LinearLayout
        android:id="@+id/layoutButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/inputPassword"
        android:layout_marginTop="8dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:padding="10dp"
            android:background="@drawable/custom_register_button"
            android:text="@string/otp_request_dialog_btn_cancel"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:padding="10dp"
            android:background="@drawable/custom_register_button"
            android:text="@string/otp_request_dialog_btn_sign_in"
            android:textColor="@android:color/white" >
        </Button>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center_vertical|center_horizontal"
        android:indeterminate="true"
        android:visibility="gone" />

</RelativeLayout>